Fixing Junit Test